samples/_failures_safe/1761244731_097b1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26111e3b.c: In function ‘main’:
./samples/SAFE/__tmp_26111e3b.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_26111e3b.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26111e3b.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26111e3b.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26111e3b.c:155:17: error: expected declaration or statement at end of input
